--- a/miniweb.html
+++ b/miniweb.html
@@ -166,6 +166,7 @@
     </div>
 </div>
     <script type="text/javascript">
+	console.log('1');
         function openEditTable(){
             var x = document.getElementById("editTable");
  
