--- a/miniweb.html
+++ b/miniweb.html
@@ -185,7 +185,7 @@
         }
         function addNew(){
             var file= document.createElement("div");
-            file.setAttribute('class','file');
+            // file.setAttribute('class','file');
             var fileleft = document.createElement("div");
             fileleft.setAttribute('class','file-left');
             var fileright = document.createElement("div");
