--- a/miniweb.html
+++ b/miniweb.html
@@ -17,7 +17,7 @@
             align-items: center;
             z-index: 3;
         }
-
+        
         .addfile-left {
             display: flex;
             position: absolute;
@@ -47,6 +47,8 @@
         .description1 {
             display: flex;
             margin: 5px;
+            margin-left: 0px !important;
+            align-items: center;
         }
 
         #name,
@@ -56,6 +58,8 @@
             width: 300px;
             height: 50px;
             margin: 5px;
+            margin-left: 0px !important;
+           
         }
 
         .listFile {
@@ -74,17 +78,17 @@
         .file-left {
             display: flex;
             position: absolute;
-            height: 50%;
+            height: 100%;
             width: 50%;
             top: 0px;
             left: 10px;
             align-items: center;
-            justify-content: flex-start;
+            justify-content: center;
         }
 
         .file-right {
             position: absolute;
-            height: 50%;
+            height: 100%;
             top: 0;
             right: 0;
             width: 50%;
@@ -118,8 +122,18 @@
             background-color: aqua;
         }
         img{
-            height: 100px;
-            width: 100px;
+            height: 115px;
+            width: 115px;
+        }
+        .name1 p,.description1 p{
+            margin-bottom:0px !important;
+            margin-top:0px !important;
+        }
+        .name1{
+            margin-top:0px;
+        }
+        input {
+            margin-right: 10px;
         }
     </style>
 </head>
@@ -147,7 +161,7 @@
         </div>
     </div>
     <div class="listFile">
-        <div class="file">
+        <!-- <div class="file">
             <div class="file-left">
                 <div class="image">
 
@@ -167,7 +181,7 @@
                     <button onclick="openEditTable()">Edit</button>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <div id="editTable">
         <div>
@@ -176,24 +190,23 @@
         <div class="edittable">
 
             <div class="file">
-                <div class="file-left">
+                <div class="file-left" id="edittableleft">
                     <div class="image">
-
                     </div>
-                    <img/>
+                    <img>
                 </div>
                 <div class="file-right">
                     <div>
                         <div class="name1">
-                            <input id="editname" value="picture1">
+                            <input id="editname" >
                             <p>Name</p>
                         </div>
                         <div class="description1">
-                            <input id="editdescription" value="flower">
+                            <input id="editdescription">
                             <p>Description</p>
                         </div>
-                        <button>Save</button>
-                        <button>Delete</button>
+                        <button onclick="Save()">Save</button>
+                        <button onclick="Delete()">Delete</button>
                         <button onclick="exitEdit()">Exit</button>
                     </div>
                 </div>
@@ -201,16 +214,37 @@
         </div>
     </div>
     <script type="text/javascript">
-        console.log('1');
-
-        function openEditTable() {
+        window.userCount = 1;
+            function Save(event){
+                let namevalue= document.getElementById('editname').value;
+                let desvalue= document.getElementById('editdescription').value;
+                let name = document.getElementsByClassName('content')[Number(event.target.getAttribute('index'))-Number("1")].getElementsByTagName('input')[0];
+                let description = document.getElementsByClassName('content')[Number(event.target.getAttribute('index'))-Number("1")].getElementsByTagName('input')[1];
+                name.setAttribute('value',namevalue);
+                description.setAttribute('value',desvalue);
+            }
+        function openEditTable(event) {
+            // alert(event.target.getAttribute('index'));
             var x = document.getElementById("editTable");
-
             if (x.style.display === "none") {
                 x.style.display = "block";
             } else {
                 x.style.display = "none";
             }
+            let imgsrc= document.getElementsByTagName('img')[event.target.getAttribute('index')].getAttribute('src');
+            let img= document.createElement('img');
+            img.setAttribute('src',imgsrc);
+            img.setAttribute('class','imgedit');
+            if(!document.getElementsByClassName('imgedit')[0]==""){
+                document.getElementsByClassName('imgedit')[0].remove();
+            }
+            document.getElementById('edittableleft').appendChild(img);
+            let name = document.getElementsByClassName('content')[Number(event.target.getAttribute('index'))-Number("1")].getElementsByTagName('input')[0].value;
+            let namevalue= document.getElementById('editname');
+            namevalue.setAttribute('value',name);
+            let description = document.getElementsByClassName('content')[Number(event.target.getAttribute('index'))-Number("1")].getElementsByTagName('input')[1].value;
+            let desvalue= document.getElementById('editdescription');
+            desvalue.setAttribute('value',description);
         }
 
         function exitEdit() {
@@ -219,51 +253,62 @@
                 x.style.display = "none";
             }
         }
-        // function addNew(){
-        //     var nameValue=document.getElementById("name").value ;
-        //     var desValue=document.getElementById("description").value ;
-        //     var file= document.createElement("div");
-        //     file.setAttribute('class','file');
-        //     var fileleft = document.createElement("div");
-        //     fileleft.setAttribute('class','file-left');
-        //     var fileright = document.createElement("div");
-        //     fileright.setAttribute('class','file-right');
-        //     var image = document.createElement("div");
-        //     image.setAttribute('class','image');
-        //     var div =document.createElement("div");
-        //     var name =document.createElement("div");
-        //     name.setAttribute('class','name1');
-        //     var description = document.createElement("div");
-        //     description.setAttribute('class','description1');
-        //     var para = document.createElement("P");
-        //     para.innerHTML = "Name";
-        //     name.appendChild(para);
-        //     var para1 = document.createElement("P");
-        //     para1.innerHTML = "Description";
-        //     description.appendChild(para1);
-        //     var btnedit= document.createElement("button");
-        //     btnedit.innerHTML="Edit";
-        //     btnedit.setAttribute('onclick','openEditTable()')
-        //     var namevalue= document.createElement("input");
-        //     namevalue.setAttribute('readonly','readonly');
-        //     namevalue.value=nameValue;
-        //     var descriptionvalue= document.createElement("input");
-        //     descriptionvalue.setAttribute('readonly','readonly');
-        //     descriptionvalue.value=desValue;
-        //     div.appendChild(name);
-        //     div.appendChild(namevalue);
-        //     div.appendChild(description);
-        //     div.appendChild(descriptionvalue);
-        //     div.appendChild(btnedit);
-        //     fileright.appendChild(div);
-        //     fileleft.appendChild(image);
-        //     fileleft.appendChild(img);
-        //     file.appendChild(fileleft);
-        //     file.appendChild(fileright);
-        //     document.getElementsByClassName("listFile")[0].appendChild(file);
-        // }
+        function removeimg(){
+            document.getElementsByTagName('img')[0].remove();
+        }
+        function addNew() {
+            let nameValue=document.getElementById("name").value ;
+            let desValue=document.getElementById("description").value ;
+            let imgsrc= document.getElementById("choosefile").getElementsByTagName('img')[0].getAttribute('src');
+            debugger
+            let img= document.createElement('img');
+            img.setAttribute('src',imgsrc);
+            let file= document.createElement("div");
+            file.setAttribute('class','file');
+            let fileleft = document.createElement("div");
+            fileleft.setAttribute('class','file-left');
+            let fileright = document.createElement("div");
+            fileright.setAttribute('class','file-right');
+            let image = document.createElement("div");
+            image.setAttribute('class','image');
+            let div =document.createElement("div");
+            div.setAttribute('class','content');
+            let name =document.createElement("div");
+            name.setAttribute('class','name1');
+            let description = document.createElement("div");
+            description.setAttribute('class','description1');
+            let para = document.createElement("P");
+            para.innerHTML = "Name";
+            let para1 = document.createElement("P");
+            para1.innerHTML = "Description";
+            let btnedit= document.createElement("button");
+            btnedit.setAttribute('index', window.userCount);
+            btnedit.innerHTML="Edit";
+            btnedit.setAttribute('onclick','openEditTable(event)');
+            btnedit.setAttribute('class','btnedit');
+            window.userCount++;
+            let namevalue= document.createElement("input");
+            namevalue.setAttribute('readonly','readonly');
+            namevalue.value=nameValue;
+            let descriptionvalue= document.createElement("input");
+            descriptionvalue.setAttribute('readonly','readonly');
+            descriptionvalue.value=desValue;
+            description.appendChild(descriptionvalue);
+            description.appendChild(para1);
+            name.appendChild(namevalue);
+            name.appendChild(para);
+            div.appendChild(name);
+            div.appendChild(description);
+            div.appendChild(btnedit);
+            fileright.appendChild(div);
+            fileleft.appendChild(image);
+            fileleft.appendChild(img);
+            file.appendChild(fileleft);
+            file.appendChild(fileright);
+            document.getElementsByClassName("listFile")[0].appendChild(file);
+        }
         document.getElementById('chooseimg').onchange = function (e) {
-            console.log(e);
+            removeimg();
             for (var i = 0; i < e.srcElement.files.length; i++) {
                 var file = e.srcElement.files[i];
 
