--- a/front-end/miniweb.html
+++ b/front-end/miniweb.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <style>
-    input {
+    <!-- <style>
+    /* input {
         padding: 3px;
     }
     
@@ -68,7 +68,6 @@
         right: 0px;
         width: 100%;
         height: 600px;
-        /* display: flex; */
         align-items: center;
         z-index: 3;
         overflow-y: auto;
@@ -134,8 +133,10 @@
     }
     input {
         margin-right: 10px;
-    }
-</style>
+    } */
+    
+</style> -->
+<link rel="stylesheet" type="text/css" href="front-end\miniweb.css">
 </head>
 
 <body>
