--- a/front-end/miniweb.html
+++ b/front-end/miniweb.html
@@ -61,6 +61,7 @@
         </div>
     </div>
     <script language="javascript" src="miniweb.js"></script>
+    <script language="javascript" src="backend\jquery-3.4.1.js"></script>
 </body>
 
 </html>
