--- a/front-end/miniweb.html
+++ b/front-end/miniweb.html
@@ -62,6 +62,7 @@
     </div>
     <script language="javascript" src="miniweb.js"></script>
     <script language="javascript" src="jquery-3.4.1.js"></script>
+    <script language="javascript" src="backend/server.js"></script>
 </body>
 
 </html>
