--- a/front-end/miniweb.html
+++ b/front-end/miniweb.html
@@ -60,9 +60,10 @@
             </div>
         </div>
     </div>
-    <script language="javascript" src="miniweb.js"></script>
     <script language="javascript" src="jquery-3.4.1.js"></script>
-    <script language="javascript" src="server.js"></script>
+    <script language="javascript" src="miniweb.js"></script>
+  
+    <script language="javascript" src="serverweb.js"></script>
 </body>
 
 </html>
