--- a/front-end/miniweb.html
+++ b/front-end/miniweb.html
@@ -24,6 +24,7 @@
                     <p>Description</p>
                 </div>
                 <div><button id="btn-addnew" onclick="addNew()"> Add</button></div>
+                <div><button id="json" onclick="addJSon()"> Add</button></div>
             </div>
         </div>
     </div>
@@ -62,8 +63,7 @@
     </div>
     <script language="javascript" src="jquery-3.4.1.js"></script>
     <script language="javascript" src="miniweb.js"></script>
-  
-    <script language="javascript" src="serverweb.js"></script>
+
 </body>
 
 </html>
