--- a/front-end/miniweb.html
+++ b/front-end/miniweb.html
@@ -24,12 +24,12 @@
                     <p>Description</p>
                 </div>
                 <div><button id="btn-addnew" onclick="addNew()"> Add</button></div>
-                <div><button id="json" onclick="addJSon()"> Add</button></div>
             </div>
         </div>
     </div>
     <div class="listFile">
     </div>
+    <div id="loading"></div>
     
     <div id="editTable">
         <div>
