--- a/front-end/miniweb.html
+++ b/front-end/miniweb.html
@@ -16,7 +16,7 @@
         <div class="addfile-right">
             <div>
                 <div class="name">
-                    <input id="name" property="name">
+                    <input id="name" property="name" >
                     <p>Name</p>
                 </div>
                 <div class="description">
@@ -29,7 +29,7 @@
     </div>
     <div class="listFile">
     </div>
-    <div id="loading"></div>
+    <div id="loading">LOADING...</div>
     
     <div id="editTable">
         <div>
